dfir_rs/tests/compile-fail/stable/surface_negative_loop.stderr
error: Not a DAG: [GraphNodeId(1v1)]
 --> tests/compile-fail/stable/surface_negative_loop.rs:5:16
  |
5 |         diff = difference();
  |                ^^^^^^^^^^
